# Jimams-methanekiller

./: .gitignore  README.md  app.py  main.py  pyproject.toml  setup.py
app/: app.py  classifier.py  leak_certificate.csv
img_recognizer/: classifier.py  dataset.py  deep_learning_resnet.ipynb  evaluation.py  loss.py  model.py  train.py
tableau_component/: tableau.html
