[tool.poetry]
name = "methane-killer"
version = "0.1.0"
description = ""
authors = ["Jimams"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.12"
streamlit = "^1.27.2"
scikit-learn = "^1.3.1"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
